# voxelizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
benchmarks/: example.csv
dependencies/file_dialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h
dependencies/imgui/: imgui.h  imgui_demo.cpp
dependencies/implot/: implot.cpp  implot.h  implot_demo.cpp  implot_internal.h  implot_items.cpp
src/: benchmark.cpp  benchmark.hpp  bresenhamVoxelizer.cpp  bresenhamVoxelizer.hpp  bvhNode.cpp  bvhNode.hpp  bvhVoxelizer.cpp  bvhVoxelizer.hpp  camera.cpp  camera.hpp  constants.hpp  dataHandler.cpp  dataHandler.hpp  eventHandler.cpp  eventHandler.hpp  gui.cpp  gui.hpp  mesh.cpp  mesh.hpp  meshDataHandler.cpp  meshDataHandler.hpp  naiveVoxelizer.cpp  naiveVoxelizer.hpp  objParser.cpp  objParser.hpp  objReader.cpp  objReader.hpp  octreeBVHVoxelizer.cpp  octreeBVHVoxelizer.hpp  octreeNode.cpp  octreeNode.hpp  octreeVoxelizer.cpp  octreeVoxelizer.hpp  openGLHandler.cpp  openGLHandler.hpp  optimizedVoxelizer.cpp  optimizedVoxelizer.hpp  parser.hpp  program.cpp  program.hpp  (+24 more)
src/gui/: benchmarkGui.cpp  benchmarkGui.hpp  gui.cpp  gui.hpp  guiConfig.hpp  mainGui.cpp  mainGui.hpp
src/shaders/: shader.fs.frag  shader.vs.vert
src/windows/: benchmarkWindowHandler.cpp  benchmarkWindowHandler.hpp  renderingWindowHandler.cpp  renderingWindowHandler.hpp  windowHandler.cpp  windowHandler.hpp
